# gtm-ga4-sync

./: .gitignore  LICENSE  README.md  events.example.yml  pyproject.toml
skills/gtm-ga4-tagging/: SKILL.md
src/gtm_ga4_sync/: __init__.py  auth.py  cli.py  config.py  ga4.py  gtm.py
tests/: test_config.py
